Added config files

--- a/etc/goesproc.conf
+++ b/etc/goesproc.conf
@@ -37,7 +37,7 @@ filename = "{filename}_contrast"
   # GOES-16 contrast curve and false color LUT. Uncomment the snippet
   # below and update the path to point to the contrast curve file.
   [handler.remap.ch02]
-  path = "./wx-star.com_GOES-R_ABI_C02_contrast-curve.pgm"
+  path = "~/wx-star_false-color/goestools/wx-star.com_GOES-R_ABI_C02_contrast-curve.pgm"
 
 # GOES-16 full disk, channel 2 and 13 to produce a false color image.
 # The sections [handler.remap] and [handler.lut] below apply to this handler.
