--- a/etc/goesrecv.conf
+++ b/etc/goesrecv.conf
@@ -2,8 +2,8 @@
 ## Use LRIT mode for GOES-15.
 # mode = "lrit"
 ## Use HRIT mode for GOES-16 or later.
-# mode = "hrit"
-source = "airspy"
+mode = "hrit"
+source = "hackrf"
 
 # The section below configures the sample source to use.
 #
@@ -33,13 +33,14 @@ source = "airspy"
 # bias_tee = false
 # device_index = 0
 
-# [hackrf]
-# frequency = 1694100000
-# sample_rate = 8000000
-# if_gain = 32
-# bb_gain = 34
-# rf_amp_enabled = true
-# bias_tee = false
+[hackrf]
+frequency = 1694000000
+# software_frequency = 1694100000
+sample_rate = 8000000
+if_gain = 8
+bb_gain = 12
+rf_amp_enabled = false
+bias_tee = true
 
 # [nanomsg]
 # sample_rate = 2400000
